# 2018-tfm-Francisco-Palacios

./: README.md
AndroidOpenCVC/: Readme.md
AndroidOpenCVC/app/: CMakeLists.txt  build.gradle
AndroidOpenCVC/app/src/androidTest/java/com/example/aopencvc/androidopencvc/: ExampleInstrumentedTest.java
AndroidOpenCVC/app/src/main/: AndroidManifest.xml  jniLibs
AndroidOpenCVC/app/src/main/cpp/: SDSLAMHandler.cc  SDSLAMHandler.h  glwrapper.h  native-lib.cpp  native_opengl.cpp  opengl_example.cpp  opengl_example.h
AndroidOpenCVC/app/src/main/java/aopencvc/opengl/: Arrow.java  CamTrail.java  CoordsObject.java  InitShaders.java  ObjectInit.java  ObjectRenderer.java  OpenGLJNIWrapper.java  Shaders.java  SurfaceViewer.java
AndroidOpenCVC/app/src/main/java/aopencvc/utils/: ActivitySingleton.java  CameraHandler.java  CoordinateConversor.java  ExtrinsicsCalculator.java  SLAMHandler.java
AndroidOpenCVC/app/src/main/java/com/example/aopencvc/androidopencvc/: ARCamera.java  Canny.java  MainActivity.java  Recorder.java  SDSLAM.java
AndroidOpenCVC/app/src/main/res/layout/: activity_arcamera.xml  activity_canny.xml  activity_main.xml  activity_sdslam.xml  content_arcamera.xml  content_canny.xml  content_sdslam.xml
AndroidOpenCVC/app/src/main/res/values/: strings.xml
AndroidOpenCVC/app/src/test/java/com/example/aopencvc/androidopencvc/: ExampleUnitTest.java
AndroidOpenCVC/gradle/wrapper/: gradle-wrapper.properties
AndroidOpenCVC/openCVLibrary320/: build.gradle
Android_C_OpenCV_Template/: foo.txt
OpenGLExample/: OpenGLExample.cpp
docs/: _config.yml  index.md
memoria/: memoria.aux  memoria.lof  memoria.tex  memoria.toc
